[gd_scene load_steps=4 format=3 uid="uid://dyde6bk82ph4f"]

[ext_resource type="Script" path="res://game/start/start_screen.gd" id="1_f8f3u"]
[ext_resource type="Texture2D" uid="uid://cub1jj61rbdt" path="res://assets/bg og.PNG" id="2_35den"]
[ext_resource type="Texture2D" uid="uid://brvflhw348032" path="res://assets/splash out logo.PNG" id="3_2133f"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8f3u")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_35den")

[node name="ContentMargins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentVbox" type="VBoxContainer" parent="ContentMargins"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="ContentMargins/ContentVbox"]
layout_mode = 2
texture = ExtResource("3_2133f")

[node name="HSeparator" type="HSeparator" parent="ContentMargins/ContentVbox"]
layout_mode = 2

[node name="ButtonHBox" type="HBoxContainer" parent="ContentMargins/ContentVbox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Start" type="Button" parent="ContentMargins/ContentVbox/ButtonHBox"]
layout_mode = 2
text = "Start"

[node name="Quit" type="Button" parent="ContentMargins/ContentVbox/ButtonHBox"]
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="ContentMargins/ContentVbox/ButtonHBox/Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="ContentMargins/ContentVbox/ButtonHBox/Quit" to="." method="_on_quit_button_down"]
